FolderProjectPage -> BaseProjectPage